# AO3scraper

./: .gitignore  AO3.sql  README.md  pyproject.toml  requirements.txt
.github/workflows/: setup.yaml
ao3/: Fandom.py  Work.py
neo4j/: importData.cypher
scripts/: combine_years.py  get_all_works_from_fandom.py  get_work_info.py  get_work_info_args.py
src/ao3scraper/: DataClean.py  Fandom.py  User.py  Work.py
